# BSUIR

./: .gitignore  LICENSE  README.md
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-1/: table.py  task-I  task-I.cpp  task-a  task-a.cpp  task-b  task-b.cpp  task-c  task-c.cpp  task-d  task-d.cpp  task-e  task-e.cpp  task-g  task-g.cpp  task-h  task-h.cpp  test  test.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-10/: CMakeLists.txt  Task-A.cpp  Task-B.cpp  Task-C.cpp  Task-D.cpp  Task-E.cpp  Task-F.cpp  Task-G.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-11/: CMakeLists.txt  Task-A.cpp  Task-B.cpp  Task-C.cpp  Task-D.cpp  Task-E.cpp  Task-F.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-12/: CMakeLists.txt  Task-A.cpp  Task-B.cpp  Task-C.cpp  Task-D.go  Task-E.go  Task-F.go  f.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-2/: task-a  task-a.cpp  task-b  task-b.cpp  task-c  task-c.cpp  task-d  task-d.cpp  task-e  task-e.cpp  task-f  task-f.cpp  task-g  task-g.cpp  task-h  task-h.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-3/: task-a  task-a.cpp  task-b  task-b.cpp  task-c  task-c.cpp  task-d.cpp  task-e  task-e.cpp  test  test.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-4/: go.mod  task-b.go  task-c.go  task-d..go  task-e.go
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-5/: CMakeLists.txt  taskA  taskA.cpp  taskB  taskB.cpp  taskC.cpp  taskCSquareHash.cpp  taskD  taskD.cpp  taskE  taskE.cpp  taskF.cpp  taskG  taskG.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-6/: CMakeLists.txt  tasF.cpp  taskE  taskE.cpp  taskG  taskG.cpp  task_C  task_C.cpp  task_D  task_D.cpp  task_a.cpp  task_b  task_b.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-7/: CMakeLists.txt  findClosest.cpp  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp  taskG.cpp  taskH.cpp
Algorithms_and_Data_Structures_T-Bank/tbank/Contest-8/: CMakeLists.txt  Task-A.cpp  Task-B.cpp  (+4 more)
Fundamentals-of-algorithmization-and-programming_2nd_semester/: .gitignore
Fundamentals-of-algorithmization-and-programming_2nd_semester/Laba4/Task-4-5/Solve/: CMakeLists.txt  SynchronizedSlicePair.h  main.cpp  mainwindow.cpp  mainwindow.h
Fundamentals-of-algorithmization-and-programming_2nd_semester/Laba4/Task-4-5/slice/: Allocator.h  CMakeLists.txt  Iterator.cpp  Iterator.h  pair.cpp  pair.h  slice.cpp  slice.h
Programming/Laba1/: 453503_Khadorik.csproj  Lab-1.sln  Program.cs  Solution.cs
Programming/Laba2/: HelpersMethods.cs  IsoscelesTriangle.cs  Lab-2.csproj  Lab-2.sln  PointPosition.cs  Program.cs
Programming/Laba3/: Lab3.sln  Program.cs
Programming/Laba4/: Lab-4.sln  Program.cs
Programming/Laba5/: Lab-5.sln  Program.cs
Programming/Laba6/: ClassDiagram1.cd  Lab-6.csproj  Lab-6.sln  Program.cs
Programming/Laba7/: Interval.cs  Lab-7.csproj  Lab-7.sln  Program.cs
(+207 files in other folders)
